--- a/login_error.html
+++ b/login_error.html
@@ -1,10 +1,4 @@
 <!DOCTYPE html>
-<!-- ---------------------------------------------------------------------------
- * filename    : login.php
- * author      : George Corser, gcorser@gmail.com
- * description : This program displays login error message
- * ---------------------------------------------------------------------------
- -->
 <html lang="en">
 <head>
 		<meta charset="utf-8" />
@@ -13,7 +7,7 @@
 		<meta name="description" content="Stockmeyer Modern Business" />
 		<meta name="author" content="Staci Stockmeyer" />
 
-		<title>Stockmeyer Business</title>
+		<title>Physician Appointments</title>
 
 		<!--favricon-->
 		<link rel="icon" href="Medicine Stethoscope.png" type="image/png" />
